# ist-aasma-miniproject

./: .gitignore  CMakeLists.txt  README.md
src/: Agent.cpp  Agent.h  FlexibleAgent.cpp  FlexibleAgent.h  HomogeneousAgent.cpp  HomogeneousAgent.h  Makefile  RationaleAgent.cpp  RationaleAgent.h  SimplexAlgorithm.cpp  SimplexAlgorithm.h  Task.cpp  Task.h  exercise.cpp
tests/: Exercise.exe.stackdump  test.py
tests/Mypublic/: T00_output.txt  T01_output.txt  T02_output.txt  T03_output.txt  T04_output.txt  T05_output.txt  T06_output.txt  T07_output.txt  T11_output.txt  T12_output.txt  T13_output.txt  T15_output.txt  T16_output.txt  T18_output.txt  T20_output.txt
tests/Mystatement/: T01_output.txt  T02_output.txt  T03_output.txt  T06_output.txt  T07_output.txt
